# Knit-PreFlight

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  railway.worker.json  vercel.json
.github/workflows/: calibration.yml  test.yml
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/calibration/: page.tsx
frontend/components/: Header.tsx  QuestionFlag.tsx  ReportCard.tsx  RunProgress.tsx  SampleButtons.tsx  SeverityBadge.tsx  SurveyInput.tsx
frontend/lib/: api.ts
preflight/: __init__.py  bootstrap.py  cli.py  config.py  embeddings.py  logging.py  main.py
preflight/calibration/: metrics.py  runner.py  synthesis.py
preflight/calibration/corpus/: seed_surveys.py
preflight/db/: models.py  session.py
preflight/llm/: anthropic_client.py  circuit_breaker.py  pricing.py  rate_limiter.py
preflight/persona/: pool_generator.py  prompt_template.py  pums_loader.py  schema.py  style_composer.py
preflight/routes/: calibration.py  health.py  runs.py  samples.py
preflight/schemas/: report.py  run.py  survey.py
preflight/seeds/: precompute_reports.py  sample_loader.py
preflight/stats/: report_composer.py  types.py
preflight/worker/: dispatcher.py  main.py  queue.py  state.py
scripts/: entrypoint.sh  prepare_pums.py
seeds/sample_surveys/: 01_clean_consumer_satisfaction.json  02_defect_bearing_concept_test.json  03_mixed_quality_brand_tracker.json
tests/: conftest.py  test_bootstrap.py  test_calibration_metrics.py  test_circuit_breaker.py  test_config.py  test_correlation_analyzer.py  test_health.py  test_injection.py  test_irt.py  test_multi_row_tolerance.py  test_paraphrase_shift.py  test_paraphrase_validation.py  test_pool_generator.py  test_precompute_reports.py  test_pricing.py  test_probe_tooling.py  test_prompt_template.py  test_pums_loader.py  test_quota_montecarlo.py  test_report_composer.py  test_sample_loader.py  test_screener_graph.py  test_state_machine.py  test_style_composer.py  test_survey_schema.py  test_synthesis.py
tests/fixtures/: test_5q_survey.json
(+22 files in other folders)
