[project]
name = "preflight"
version = "0.1.0"
description = "Pre-launch quality gate for AI-generated research surveys via persona-conditioned LLM probes"
requires-python = ">=3.12"
authors = [{name = "Krishna Teja"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.2",
    "anthropic>=0.39",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "networkx>=3.4",
    "sentence-transformers>=3.3",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers[postgres,redis]>=4.8",
]
stats = [
    "py-irt>=0.5",
]

[project.scripts]
preflight = "preflight.cli:main"

[tool.setuptools.packages.find]
# Automatic discovery so every subpackage (preflight.persona,
# preflight.worker, preflight.routes, preflight.stats, preflight.calibration,
# preflight.seeds, preflight.schemas, preflight.db, preflight.llm) gets
# copied into site-packages on `pip install .`. Without this setuptools
# only ships the top-level preflight/ files and the production import
# fails with `ModuleNotFoundError: No module named 'preflight.persona'`.
where = ["."]
include = ["preflight*"]
exclude = ["tests*", "scripts*", "seeds*", "data*", "docs*", "frontend*"]

[tool.setuptools.package-data]
"preflight.db.migrations" = ["versions/*.py", "*.mako"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
